--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Theologians -- France -- Biography'
 - !lcsh 'Authors, Latin (Medieval and modern) -- France -- Biography'
 - !lcsh 'Abelard, Peter, 1079-1142'
+- GITenberg
 title: Historia Calamitatum
 url: http://www.gutenberg.org/ebooks/14268
